--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,7 +257,8 @@ footer {
 /* media queries */
 
 /* for larger to medium screen size from 1200px wide and down*/
-@media screen and (max-width: 1200) {
+@media screen and (max-width: 1200px) {
+    
     #club-ethos {
         width: 65%;
         height: 1200px;
@@ -266,7 +267,7 @@ footer {
 }
 
 #welcome {
-    padding: 30px;
+    padding: 30px 0;
     margin: 0;
 }
 
@@ -280,8 +281,21 @@ footer {
     clear: both;
     width: 100%;
     float: left;
+    padding: 0;
 }
 
 hr {
     display: none;
+}
+
+/* For medium screen sizes from 950px wide and down*/
+@media screen and (max-width: 950px) {
+    
+    #menu {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+        }
 }
