--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,7 +214,7 @@ hr {
     text-align: center;
     border: 2px solid white;
     box-sizing: border-box;
-    }
+}
 
 #times h2 {
     color: #fafafa;
@@ -248,9 +248,9 @@ footer {
     line-height: 0;
     column-count: 4;
     column-gap: 0;
-} 
+}
 
-#photos > img {
+#photos>img {
     width: 100%;
 }
 
@@ -258,7 +258,7 @@ footer {
 
 /* for larger to medium screen size from 1200px wide and down*/
 @media screen and (max-width: 1200px) {
-    
+
     #club-ethos {
         width: 65%;
         height: 1200px;
@@ -271,7 +271,8 @@ footer {
     margin: 0;
 }
 
-#left-about, #right-about {
+#left-about,
+#right-about {
     width: 100%;
     float: left;
     padding: 0;
@@ -290,12 +291,35 @@ hr {
 
 /* For medium screen sizes from 950px wide and down*/
 @media screen and (max-width: 950px) {
-    
+
     #menu {
         clear: left;
         float: left;
         margin-left: 30px;
         margin-bottom: 20px;
         line-height: 25px;
-        }
+    }
 }
+
+    #cover-text {
+        left: 0;
+}
+    #club-ethos {
+        width: 90%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    .left-about-heading, .right-about-heading {
+        width: inherit;
+    }
+
+    .left-about-heading h2, .right-about-heading h2 {
+        width: 100%;
+        text-align: center;
+    }
+
+    .left-about-heading p, .right-about-heading p {
+        text-align: center;
+        padding: 0 20px;
+    }
