--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,10 +247,10 @@ footer {
     clear: both;
     line-height: 0;
     column-count: 4;
-    column-gap: 0;
+    column-gap: 0px;
 }
 
-#photos>img {
+#photo img {
     width: 100%;
 }
 
@@ -258,7 +258,6 @@ footer {
 
 /* for larger to medium screen size from 1200px wide and down*/
 @media screen and (max-width: 1200px) {
-
     #club-ethos {
         width: 65%;
         height: 1200px;
@@ -268,7 +267,7 @@ footer {
 
 #welcome {
     padding: 30px 0;
-    margin: 0;
+    margin-top: 0;
 }
 
 #left-about,
@@ -285,7 +284,7 @@ footer {
     padding: 0;
 }
 
-#times > div {
+#times>div {
     width: 100%;
     clear: both;
     height: 150px;
@@ -308,36 +307,40 @@ hr {
     }
 }
 
-    #cover-text {
-        left: 0;
+#cover-text {
+    left: 0;
 }
-    #club-ethos {
-        width: 90%;
-        height: 1200px;
-        margin: 0 auto;
-    }
 
-    .left-about-heading, .right-about-heading {
-        width: inherit;
-    }
+#club-ethos {
+    width: 90%;
+    height: 1200px;
+    margin: 0 auto;
+}
 
-    .left-about-heading h2, .right-about-heading h2 {
-        width: 100%;
-        text-align: center;
-    }
+.left-about-heading,
+.right-about-heading {
+    width: inherit;
+}
 
-    .left-about-heading p, .right-about-heading p {
-        text-align: center;
-        padding: 0 20px;
-    }
+.left-about-heading h2,
+.right-about-heading h2 {
+    width: 100%;
+    text-align: center;
+}
 
+.left-about-heading p,
+.right-about-heading p {
+    text-align: center;
+    padding: 0 20px;
+}
+
+#photos {
+    column-count: 3;
+}
+
+/* For small screen sizes 800px and down*/
+@media screen and (max-width: 800px) {
     #photos {
-        column-count: 3;
+        column-count: 2;
     }
-
-    /* For small screen sizes 800px and down*/
-    @media screen and (max-width: 800px) {
-        #photos {
-            column-count: 2;
-        }
-    }
+}
